commit b6021a5
Author: hutch <hutch@midwales.net>
Date:   Sat Jun 15 21:47:43 2013 +0100

    fixed OSM as default

js/getlocations.js
modules/getlocations_search/getlocations_search.module

commit ffbf9ca
Author: hutch <hutch@midwales.net>
Date:   Sat Jun 15 20:09:35 2013 +0100

    more improvements to search_places

getlocations.module
js/getlocations_search_places.js

commit 8b5f09c
Author: hutch <hutch@midwales.net>
Date:   Fri Jun 14 20:19:50 2013 +0100

    added list feature to search_places

getlocations.css
getlocations.module
js/getlocations.js
js/getlocations_search_places.js
modules/getlocations_fields/getlocations_fields.module
modules/getlocations_search/getlocations_search.module
views/getlocations_plugin_style_map.inc

commit 27b05b1
Author: hutch <hutch@midwales.net>
Date:   Fri Jun 14 11:14:12 2013 +0100

    added dropdown option to search places, getdirections link in bubble

CHANGELOG.txt
getlocations.css
getlocations.module
js/getlocations_search_places.js
modules/getlocations_fields/getlocations_fields.module
modules/getlocations_search/getlocations_search.module
views/getlocations_plugin_style_map.inc

commit 75f5036
Author: hutch <hutch@midwales.net>
Date:   Thu Jun 13 16:15:24 2013 +0100

    better search_places bubble

getlocations.css
js/getlocations_search_places.js

commit ec48f15
Author: hutch <hutch@midwales.net>
Date:   Wed Jun 12 11:53:21 2013 +0100

    fixed some defaults

modules/getlocations_fields/getlocations_fields.module
views/getlocations.views.inc

commit 042d38f
Author: hutch <hutch@midwales.net>
Date:   Tue Jun 11 09:36:17 2013 +0100

    added search_places feature

getlocations.admin.inc
getlocations.css
getlocations.module
js/getlocations.js
js/getlocations_admin.js
js/getlocations_search_places.js
js/getlocations_views.js
modules/getlocations_fields/getlocations_fields.module
modules/getlocations_fields/js/getlocations_fields_formatter.js
modules/getlocations_search/getlocations_search.module